# armStrap-Builder

./: .gitignore  Makefile.am  README.md  armShell.in  configure.ac  go  makedeb  makerootfs.in  makever
GenSSHKeys/: .version  Makefile.am  gensshkeys  postinst  prerm
Kernels/: Kernel.mk  Makefile.am  mkvirtual
Kernels/configs/: armStrap_mainline_defconfig  armStrap_sun4i-stage_defconfig  armStrap_sun4i_defconfig  armStrap_sun7i-stage_defconfig  armStrap_sun7i_defconfig  armStrap_sunxi-next_defconfig
NAND-Installer/: .version  Makefile.am  armstrap-nand-installer  armstrap-nand-installer.8
RootFS/: Makefile.am
Sunxi-Tools/: .version  Makefile.am  armstrap-sunxi-tools.8
U-Boot/: .version  Makefile.am  README  U-Boot.mk  armstrap-u-boot-installer  armstrap-u-boot-installer.8  armstrap-u-boot-installer.in  armstrap-u-boot.8  boot.cmd.dist  postinst.in
uImage-Installer/: .version  Makefile.am  boot.cmd.dist  clean-uImage  postinst  prerm  update-uImage
